# SFMS

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  QtFileManager.pro  README.md  Release.ps1  app.rc  main.cpp
